style.css
/* ... */
.filter-button[aria-checked="false"] .avatar-container > img {
	opacity: .4
}

.feed-filter {
	flex-grow: 1;
}

.feed-filter > ul {
	padding: initial;
}

.about-button {
	fill: rgb(var(--background-color-rgb));
	stroke: currentColor;
}

.main-container {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

main {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

.date-heading {
	position: sticky;
	z-index: 1; /* Put it above `.event-thumbnail-container`. */
	top: 0;
	text-align: center;
	background-color: rgba(var(--background-color-rgb), 0.8);
	-webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
	border-bottom: solid var(--border-width) var(--border-color);
	break-after: avoid-page;
}

@supports not ((backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px))) {
	.date-heading {
		background-color: rgb(var(--background-color-rgb));
	}
}

@media (prefers-contrast: more) {
	.date-heading {
		background-color: rgb(var(--background-color-rgb));
	}
}

.now {
	margin: var(--margin-unit) 0;
	border-top: solid var(--border-width) var(--border-color);
	border-bottom: solid var(--border-width) var(--border-color);
	text-align: center;
}

/* Animate the time separator to indicate that the time is dynamically updated. */
/*
 * Note on accessibility concerns:
 *
 * Yes, this is the condemned [^1] flash effect. However, I think this is fine because the animation
 * is far below the threshold of unacceptable flashes as specified by WCAG 2.1 [^2], both in terms
 * of frequency and of occupied area of visual field.
 *
 * Also, the animation is disabled if `prefers-reduced-motion` media feature is enabled.
 *
 * [^1]: <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blink>
 * [^2]: <https://www.w3.org/TR/WCAG21/#dfn-general-flash-and-red-flash-thresholds>
 */
:root {
	animation: 2s flash steps(2) infinite;
}

.flashing-time .time-separator {
	/* Animate `opacity` instead of `visibility`
	 * to prevent screen readers from announcing the change when focused. */
	opacity: var(--flash-opacity);
}

@keyframes flash {
	from {
		--flash-opacity: 1;
	}
	to {
		--flash-opacity: 0;
	}
}

@media (prefers-reduced-motion) {
	.flashing-time .time-separator {
		animation: none;
	}
}

.ongoing {
	background-color: #FF04;
}

.event {
	position: relative;
	width: var(--event-width);
	margin-top: calc(-1 * var(--border-width));
	border: solid var(--border-width) var(--border-color);
	border-left: none;
	border-right: none;
	padding-bottom: var(--margin-unit);
	break-inside: avoid;
}

.event-padding {
	padding: var(--margin-unit);
}

.event-header-grid {
	display: grid;
}

.event-thumbnail-container {
	position: relative;
	order: -1;
}

.event-thumbnail {
	display: block;
	width: 100%;
	aspect-ratio: 16 / 9;
}

.event-duration {
	position: absolute;
	inset: auto 0 0 auto;
	border-top-left-radius: 5px;
	padding: 0 calc(var(--margin-unit) / 2);
	background-color: rgba(var(--background-color-rgb), .4);
	-webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
	color: var(--color);
}

@supports not ((backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px))) {
	.event-duration {
		background-color: rgba(var(--background-color-rgb), .8);
	}
}

@media (prefers-contrast: more) {
	.event-duration {
		background-color: rgb(var(--background-color-rgb));
	}
}

.event-members {
	display: flex;
	padding: 0 var(--margin-unit);
	height: 60px;
	overflow-x: scroll;
	white-space: nowrap;
}

.event-members > li + li {
	margin-left: var(--margin-unit);
}

.event-members .avatar-container {
	width: 60px;
	height: 60px;
}

.popup-container {
	position: absolute;
	inset: var(--margin-unit) var(--margin-unit) auto auto;
}

.popup-toggle {
	cursor: pointer;
}

.popup-backdrop {
	display: flex;
	flex-direction: column;
	position: fixed;
	z-index: 3;
	inset: 0;
	width: 100vw;
	height: 100vh;
}

.popup-toggle[aria-expanded="false"] ~ .popup-backdrop {
	display: none;
}

.popup-backdrop::before {
	content: "";
	flex-grow: 1;
	width: 100%;
	-webkit-backdrop-filter: brightness(.6);
	backdrop-filter: brightness(.6);
}

.popup {
	width: 100%;
	background-color: rgba(var(--background-color-rgb), .5);
	-webkit-backdrop-filter: blur(50px);
	backdrop-filter: blur(50px);
	border: solid var(--border-width) var(--border-color);
	border-left: none;
	border-right: none;
}

@supports not ((backdrop-filter: blur(50px)) or (-webkit-backdrop-filter: blur(50px))) {
	.popup {
		background-color: rgb(var(--background-color-rgb));
	}
}

@media (prefers-contrast: more) {
	.popup {
		background-color: rgb(var(--background-color-rgb));
	}
}

.popup button {
	cursor: pointer;
	padding: calc(2 * var(--margin-unit));
	width: 100%;
	text-align: initial;
}

.empty-result {
	text-align: center;
}

.flex-padding {
	flex-grow: 1;
}

.load-more-feed {
	display: flex;
	flex-direction: column;
	justify-content: center;
	height: var(--hamburger-length);
	text-align: center;
}

.load-more-feed-button {
	width: 100%;
	height: 100%;
	font-size: initial;
}

.social-icon {
	vertical-align: middle;
	width: 2em;
	height: 2em;
	fill: currentColor;
}

.error-log {
	max-height: calc(100vh - 260px);
	min-height: 2em;
	overflow-y: scroll;
	background-color: red;
	color: white;
	font-family:
		'Helvetica Neue',
		'ヒラギノ角ゴ Pro W4',
		'Hiragino Kaku Gothic Pro',
		'メイリオ',
		'Meiryo',
		sans-serif;
}

.error-log > li {
	margin: var(--margin-unit);
}

.error-log :any-link {
	color: #0FF;
}

.dismiss-error {
	float: right;
	border-radius: 5px;
	color: #000;
	background-color: #FFF;
}

.modal-backdrop {
	position: fixed;
	inset: 0;
	z-index: 4; /* Put it above everything else. */
	border: none;
	width: 100vw;
	max-width: initial;
	height: 100vh;
	max-height: initial;
	padding: 0;
	background: none;
}

.modal-backdrop:not([open]) {
	display: none;
}

.modal {
	display: flex;
	flex-direction: column;
	height: 100vh;
	color: var(--color);
}

.about li {
	display: list-item;
}
/* ... */

